# manim-GearBox

./: .gitignore  README.md  pyproject.toml
documentation/: undercut_explanation_diag.tif
src/manim_gearbox/: __init__.py
src/manim_gearbox/gear_mobject/: Gear_mobject.py  __init__.py
tests/: test_manim_gearbox.py
