[tool.poetry]
name = "manim-GearBox"
version = "0.2.1"
description = "This is an extension of Manim that helps drawing nice looking gears."
repository = "https://github.com/GarryBGoode/manim-GearBox"
authors = ["GarryBGoode <bgeri91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
scipy = "*"
manim = ">=0.13.1"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."manim.plugins"]
"manim_gearbox" = "manim_gearbox"